# medusa

./: README.md
.github/workflows/: ci.yml  release-macos.yml
examples/tip-jar/: flake.nix  install.sh  manifest.json  metadata.json
examples/tip-jar/qml/: Main.qml  medusa-connect.js
module/: CMakeLists.txt  flake.nix  metadata.json
module/modules/medusa_core/: manifest.json  metadata.json
module/plugins/medusa_ui/: flake.nix  manifest.json  metadata.json
module/plugins/medusa_ui/qml/: Main.qml
module/scripts/: install-dev.sh  make-release.sh  medusa-tor-monitor  wallet-wrapper
module/src/plugin/: WalletPlugin.cpp  WalletPlugin.h
module/tests/: fake-wallet-lez  headless_test.sh  logos_api_stub.cpp  test_wallet_plugin.cpp  wrapper_test.py
scripts/: bootstrap-treasury.sh  run-l1-tor.sh
sdk/: medusa-connect.d.ts  medusa-connect.js  medusa-connect.test.js  package.json
wallet/: build.sh
wallet/patches/: 0001-feat-wallet-password-encrypted-storage-key-mnemonic-.patch  0002-feat-wallet-account-list-json-clean-machine-readable.patch  0003-align-logos-blockchain-ee281a4-0.1.2-match-the-deplo.patch  0004-feat-sequencer-demand-driven-block-production-no-emp.patch  0005-feat-sequencer-make-demand-driven-block-production-a.patch  0006-fix-wallet-public-token-ops-print-tx-hash-poll-new-t.patch
wallet/patches-rc5/: 0001-feat-wallet-encrypted-storage-account-list-json-keyc.patch
